# Music-Player-Resonance

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: SongContextMenu.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/Lyrics/: LyricsPanel.tsx
src/components/Onboarding/: Onboarding.tsx
src/components/Player/: useMiniPlayer.ts
src/components/Settings/: SettingsPanel.tsx
src/components/Smart/: SmartPlaylistView.tsx
src/hooks/: useSettingsInit.ts
src/lib/: audioEngine.ts  db.ts  i18n.ts  scanner.ts
src/store/: index.ts
